--- a/src/apps/frontend/src/components/Editor/editor.css
+++ b/src/apps/frontend/src/components/Editor/editor.css
@@ -1,3 +1,7 @@
 .editor {
 	grid-area: editor;
 }
+
+.default-editor {
+	height: 100%;
+}
