--- a/src/apps/frontend/src/components/Navbar/navbar.css
+++ b/src/apps/frontend/src/components/Navbar/navbar.css
@@ -3,6 +3,7 @@
 	grid-area: navbar;
 	display: grid;
 	grid-template-areas: "main-navbar section";
+	overflow: hidden;
 }
 
 .navbar.section-closed {
